--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/study?useSSL=false&useUnicode=true&ServerTimezone=Asia/Seoul
+
+#db response name
+spring.datasource.username=root
+spring.datasource.password=tjrdnjs12
